# MidTerm-Parallel-K-means

./: CMakeLists.txt  Midterm parallel Giuliani Gianluca.odp  README.md  main.cpp  main2.cpp  plot AoS vs SoA.py  plot_execution_times.py  plot_points.py  plotting.py
data/: centroids.csv  centroids_parallel.csv  execution_times.csv  output_parallel.csv  points.csv
include/: AoS.h  Aos.h  Cluster Point.h  SoA.h  SoA_Parallel.h  Utility.h
